tests/paczka1/small_fuzzy/49292642.err
Error in line 1: YClH S941 92,9
Error in line 5: S738 S941 6,2
Error in line 2: YClH S156 60,4
Error in line 8: wH9 S156 19,2
